<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_background"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_icon" />


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appIcon"
        android:layout_centerHorizontal="true"
        android:text="RooMates"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <ScrollView
        android:id="@+id/inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Phone"
                android:layout_centerHorizontal="true"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_registration"
                android:drawableLeft="@drawable/ic_phone_white_36dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_below="@+id/Phone"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_registration"
                android:drawableLeft="@drawable/lock"
                android:fontFamily="Lato-Regular"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_below="@+id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginn_button_shape"
                android:gravity="center"
                android:onClick="signIn"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/inputLayout"
        android:layout_marginRight="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="Lato-Regular"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>