<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/validate_phone_background"
    android:padding="0dip"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
       android:visibility="gone" >

        <TextView
            android:id="@+id/enterToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#d67601"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/codeInput"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:hint="@string/enter_code"/>

        <Button
            android:id="@+id/codeInputButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="#d67601"
            android:minHeight="56dp"
            android:onClick="btnValidate_OnClick"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/smsNotRecived"
            android:text="לא קיבלת SMS? נסה שנית"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:textColor="@color/wallet_holo_blue_light"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/numberInputLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">


        <TextView
            android:id="@+id/enterPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/enterphonenumber"
            android:textAllCaps="true"
            android:textColor="#d67601"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/input_box"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp">

        <Button
            android:id="@+id/smsVerificationButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:background="#d67601"
            android:minHeight="56dp"
            android:minWidth="132dp"
            android:onClick="sumbitButton_OnCLick"
            android:text="@string/confirm_phone_number"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </LinearLayout>




</RelativeLayout>
