<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegistraionActivity"
    tools:showIn="@layout/activity_registraion"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/group_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="146dp"
                    android:layout_height="146dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/camera_image_background"
                    />

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="41dp"
                    android:layout_marginTop="48dp"
                    android:alpha="0.45882352941177"
                    android:src="@drawable/icon_camera" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp">

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="375dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_registration"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableLeft="@drawable/ic_phone_white_36dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="Lato-Regular"
                    android:gravity="center"
                    android:hint=""
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/phoneNumber"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/edit_text_registration"
                    android:drawableLeft="@drawable/user"
                    android:fontFamily="Lato-Regular"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/first_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/edit_text_registration"
                    android:drawableLeft="@drawable/user"
                    android:fontFamily="Lato-Regular"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/last_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_registration"
                    android:drawableLeft="@drawable/lock"
                    android:fontFamily="Lato-Regular"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/loginn_button_shape"
                    android:gravity="center"
                    android:onClick="signup"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/registration"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_below="@+id/register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="Lato-Regular"
                    android:text="@string/already_have_an_account"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/already_have_an_account"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/registration_button_red"
                    android:gravity="center"
                    android:onClick="login"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>