<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar"></include>
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btnInternet"
        style="@style/MaterialAnimations.Icon.Big"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/computer"
        android:paddingTop="12dp"
        android:text="אינטרנט"
        android:textColor="#fff"
        android:textSize="10dp"
        android:transitionName="@string/btnTransmistion" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/totalAmount"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_style"
                android:drawableLeft="@drawable/shekel"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="@string/totalAmountHint"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="#fffcfd"
                android:textStyle="bold|italic"
                android:typeface="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/tvDayOfPapy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/payDay" />

                <Spinner
                    android:id="@+id/daysOfMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/tvDayOfPapy"
                    android:entries="@array/daysOfMonth" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="הערה" />

                <CheckBox
                    android:id="@+id/cbNotPayed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/note"
                    android:text="לא שילמתי" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/amountPayedLayout">

                <EditText
                    android:id="@+id/amoutPayed"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/tvAmountPayed"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:drawableLeft="@drawable/shekel"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:hint="@string/amountPayedHint"
                    android:inputType="numberDecimal"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#ffffff"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <Button
                    android:id="@+id/btnAmountPayed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_toStartOf="@+id/amoutPayed"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style2"
                    android:text=""
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>


                <Button
                    android:id="@+id/btnAddNewBill"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="btnAddNewBill_OnClick"
                    android:background="#d67601"
                    android:text="הוסף חשבון"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>